# extrusion-terminal-prototype

./: .gitignore  AGENTS.md  FULL_WORKFLOW_AUDIT_REPORT.md  HARDWARE_SETUP.md  IMPLEMENTATION_HANDOFF.md  IMPLEMENTATION_PLAN.md  INFRASTRUCTURE_IMPLEMENTATION_PLAN.md  PRINT_OUTPUT_SPEC_AND_PLAN.md  README.md  WORKSTATION_V8_CONNECTION_PLAN.md  open-issues.md  package-lock.json  package.json  pyproject.toml  requirements.txt  todo.html
app/: __init__.py  backups.py  constants.py  db.py  importer.py  main.py  printing.py  recipe_parser.py  rules.py
excel-macros/: ExportExtrusionOrders.bas  README.md
interim-costing-process/: README.md  interim-costing-process-plan.md  interim-naming-convention-report.md  shift-manager-questions.md
prompts/: milestone-6-tare-and-roll-entry.md  milestone-7-finish-cancel-and-history.md  milestone-8-backup-and-recovery.md  milestone-9-bundle-1-admin-import-ux.md  milestone-9-bundle-2-admin-card-review.md  milestone-9-bundle-2-admin-detail-redesign-handoff.md  milestone-9-bundle-3-planning-reassignment-resequencing.md  milestone-9-bundle-4-admin-production-corrections.md  milestone-9-terminal-sync-awareness.md  milestone-9-validation-status-cleanup-handoff.md  milestone-9-workstation-v4-terminal-ui-connection.md  milestone-9-workstation-v5-prototype-review.md
reports/: admin-card-detail-ux-audit-2026-06-18.md  fast-audit-20260624.md  final-audit-plan-20260624.md  full-readiness-audit-20260702.md  full-workflow-audit-20260618.md
scripts/: create_print_template_fixture.py  provision_workstation_kiosk.sh  render_print_template.mjs  (+1 more)
(+96 files in other folders)
