[project]
name = "extrusion-terminal-prototype"
version = "0.1.0"
description = "FastAPI and SQLite pilot app for extrusion operational cards."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[tool.uvicorn]
factory = false
